# yolov8

./: .env.example  .gitignore  README.md  quantize.py  quantize_help.txt  todo  train.py
research/: CMakeLists.txt  main.cpp  main_example.cpp  onnx_stackoverflow.cpp  yolov8.cpp
